Wrap stop list height

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@ div#header a {
     color: green;
 }
 
+html, body {
+    padding: 0px;
+    margin: 0px;
+    height: 100%;
+}
+
+div#page {
+    position: relative;
+    height: 100%;
+}
+
 #header {
     border-bottom: solid;
     border-width: 1px;
@@ -20,19 +31,25 @@ h2 {
 	color: green;
 }
 
+div#content {
+    height: 60%;
+}
+
 div#map {
-    height: 640px;
-    width: 50%;
     float: left;
+    height: 100%;
+    width: 50%;
 }
 
 div#data_display {
-    width: 50%;
     float: left;
+    width: 50%;
+    overflow-y: auto;
+    height: 100%;
 }
 
-#stops_list td{
-    font-size: 1.2em;
+#stops_list td a{
+    color: inherit;
 }
 
 .feature_yes {
@@ -45,6 +62,10 @@ div#data_display {
 
 .feature_undefined {
     color: grey;
+}
+
+.wheelchair {
+    font-size: 1.6em;
 }
 
 li.bus_route, li.trolleybus_route {
